--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,6 @@
-
+$postoutline: black;
+$postbackground: green;
+$bodybackground:white;
 
 
 nav{
@@ -24,7 +26,44 @@ img{
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  outline: 3px solid red;
+  background-color: $postbackground;
+  outline: 3px solid $postoutline;
   margin:10px;
   margin-top: 50px;
+  color:red;
+    p{
+      padding:5px;
+      text-align: center;
+    }
+    img{
+      border: 2px solid black;
+    }
+}
+
+.form-div{
+  display: flex;
+  justify-content: center;
+}
+
+form {
+  display: flex;
+  flex-direction: column;
+  outline: 2px solid green;
+  width: 80%;
+  align-items: center;
+  margin-top: 50px;
+
+
+    input[type=text]{
+      width: 90%;
+      margin:10px;
+      padding: 10px;
+    }
+    input[type=password]{
+      width: 90%;
+      margin:10px;
+      padding: 10px;
+    }
+
+    
 }
