--- a/src/styles.scss
+++ b/src/styles.scss
@@ -67,3 +67,36 @@ form {
 
     
 }
+
+
+// Carousel Style
+
+.carousel {
+  overflow: hidden
+}
+
+.inner{
+  white-space: nowrap;
+  transition:transform 0.3s;
+}
+
+.carousel-item{
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  height: 200px;
+  background-color: green;
+  color: white;
+}
+
+.indicators {
+  display: flex;
+  justify-content: center;
+    button{
+      margin: 5px;
+    }
+    button.active{
+      background-color: green;
+    }
+}
+
