--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,12 +1,27 @@
 $postoutline: black;
-$postbackground: green;
-$bodybackground:white;
+$postbackground: rgb(231,113,125);
+$bodybackground:rgb(194,187,176);
+$textcolor:rgb(175,210,116);
+
+body{
+  background-color: $bodybackground;
+}
 
 
 nav{
   display:flex;
   justify-content: space-around;
-  background-color: red;
+  align-items: center;
+  background-color: rgb(0, 0, 0,.8);
+  height: 60px;
+  font-weight: bold;
+  
+    a{
+      text-decoration: none;
+      color: whitesmoke;
+      font-size: 1.25em;
+    }
+
 }
 
 .container{
@@ -30,16 +45,38 @@ img{
   outline: 3px solid $postoutline;
   margin:10px;
   margin-top: 50px;
-  color:red;
+  color:$textcolor;
+  
     p{
       padding:5px;
       text-align: center;
+      font-size:1.5em;
+    }
+    img{
+      border: 2px solid black;
+    }
+    a{
+      text-decoration: none;
+      color:black;
+    }
+}
+
+.show-post{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+     p{
+      padding:5px;
+      text-align: center;
+      font-size:1.5em;
     }
     img{
       border: 2px solid black;
     }
 }
-
+.nav:hover{
+  cursor: pointer;
+}
 .form-div{
   display: flex;
   justify-content: center;
@@ -48,8 +85,8 @@ img{
 form {
   display: flex;
   flex-direction: column;
-  outline: 2px solid green;
-  width: 80%;
+  
+  width: 60%;
   align-items: center;
   margin-top: 50px;
 
@@ -64,15 +101,25 @@ form {
       margin:10px;
       padding: 10px;
     }
+    input[type=submit]:hover{
+      cursor: pointer;
+    }
 
     
 }
 
 
+
+
 // Carousel Style
 
 .carousel {
-  overflow: hidden
+  overflow: hidden;
+  width: 80%;
+  margin-top: 50px;
+  outline: 3px solid $postoutline;
+  background-color: $postbackground;
+  
 }
 
 .inner{
@@ -84,9 +131,13 @@ form {
   display: inline-flex;
   align-items: center;
   justify-content: center;
-  height: 200px;
-  background-color: green;
+  height: 400px;
+  width: 50%;
+  padding-top:55px;
   color: white;
+    img{
+      border: 3px solid black;
+    }
 }
 
 .indicators {
@@ -94,9 +145,14 @@ form {
   justify-content: center;
     button{
       margin: 5px;
+     
     }
     button.active{
-      background-color: green;
+      background-color: $textcolor;
     }
+}
+
+button:hover{
+  cursor: pointer;
 }
 
